doc: docs du parcours lyceen
