# src/routes/lyceen.profil.routes.ts
@@ -19,6 +19,25 @@ const router = express.Router()
  *     tags: [Lycéen]
  *     security:
  *       - bearerAuth: []
+ *     responses:
+ *       200:
+ *         description: Profil du lycéen
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '../swagger/schemas/lyceen.yaml#/components/schemas/Lyceen'
+ *       401:
+ *         description: Token d'authentification invalide
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '../swagger/schemas/lyceen.yaml#/components/schemas/Error'
+ *       404:
+ *         description: Lycéen non trouvé
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '../swagger/schemas/lyceen.yaml#/components/schemas/Error'
  */
 router.get('/profil', authenticateLyceen, getLyceenProfil)
 
@@ -30,6 +49,31 @@ router.get('/profil', authenticateLyceen, getLyceenProfil)
  *     tags: [Lycéen]
  *     security:
  *       - bearerAuth: []
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             $ref: '../swagger/schemas/lyceen.yaml#/components/schemas/LyceenUpdate'
+ *     responses:
+ *       200:
+ *         description: Profil mis à jour
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '../swagger/schemas/lyceen.yaml#/components/schemas/Lyceen'
+ *       400:
+ *         description: Données invalides
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '../swagger/schemas/lyceen.yaml#/components/schemas/Error'
+ *       401:
+ *         description: Token d'authentification invalide
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '../swagger/schemas/lyceen.yaml#/components/schemas/Error'
  */
 router.put('/profil', authenticateLyceen, validateUpdateProfil, updateLyceenProfil)
 
@@ -41,6 +85,35 @@ router.put('/profil', authenticateLyceen, validateUpdateProfil, updateLyceenProf
  *     tags: [Lycéen]
  *     security:
  *       - bearerAuth: []
+ *     parameters:
+ *       - in: query
+ *         name: region
+ *         schema:
+ *           type: string
+ *         description: Région à filtrer
+ *       - in: query
+ *         name: secteur
+ *         schema:
+ *           type: string
+ *         description: Secteur d'activité à filtrer
+ *       - in: query
+ *         name: nom_entreprise
+ *         schema:
+ *           type: string
+ *         description: Nom de l'entreprise à filtrer
+ *     responses:
+ *       200:
+ *         description: Liste des offres
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '../swagger/schemas/lyceen.yaml#/components/schemas/OffreLyceenList'
+ *       401:
+ *         description: Token d'authentification invalide
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '../swagger/schemas/lyceen.yaml#/components/schemas/Error'
  */
 router.get('/offres', authenticateLyceen, getOffres)
 
@@ -52,6 +125,48 @@ router.get('/offres', authenticateLyceen, getOffres)
  *     tags: [Lycéen]
  *     security:
  *       - bearerAuth: []
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         required: true
+ *         schema:
+ *           type: integer
+ *         description: ID de l'offre
+ *     requestBody:
+ *       required: false
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             properties:
+ *               message:
+ *                 type: string
+ *                 description: Message de motivation (optionnel)
+ *     responses:
+ *       201:
+ *         description: Proposition créée
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '../swagger/schemas/lyceen.yaml#/components/schemas/PropositionLyceen'
+ *       400:
+ *         description: Données invalides
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '../swagger/schemas/lyceen.yaml#/components/schemas/Error'
+ *       401:
+ *         description: Token d'authentification invalide
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '../swagger/schemas/lyceen.yaml#/components/schemas/Error'
+ *       404:
+ *         description: Offre introuvable
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '../swagger/schemas/lyceen.yaml#/components/schemas/Error'
  */
 router.post('/offres/:id/postuler', authenticateLyceen, validatePostuler, postulerOffre)
 
